sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:5: error: not enough arguments for method getColor: (x$1: Int)Int.
Unspecified value parameter x$1.
    if (getColor()==Color.BLUE){
                ^