sort.dutchflag.DutchFlagAlgo.scala.code
def solve() {
  var i=0
  for (x<- 0 to getSize()-1){
    if (getColor()==Color.BLUE){
      swap(i,x)
      i=i+1
    }
    
  }
}
